--- a/blogPessoal/src/app/home/home.component.html
+++ b/blogPessoal/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<div class="container">
+
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12">
+            <h1 class="text-center">Sejam bem vindos ao meu blog</h1>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-md-12">
+            <p class="text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est ea, mollitia, aliquid
+                eum rerum tempore
+                ipsa aspernatur saepe nostrum accusantium debitis odit libero voluptas amet aliquam corrupti reiciendis.
+                Voluptate, vel. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis minus ipsa labore
+                aliquam quod laudantium in deleniti, laboriosam dolorem natus molestias culpa fugit? Fuga inventore
+                nesciunt deserunt totam dolorum. Delectus.</p>
+        </div>
+    </div>
+
+</div>
+
+    <div class="parallax"></div>
+
+    <div class="row mt-5 mb-5">
+        <div class="col-md-12 d-flex justify-content-center">
+            <button class="btn btn-outline-dark" routerLink = "/feed">Ver o Feed</button>
+        </div>
+    </div>
