--- a/blogPessoal/src/app/feed/feed.component.html
+++ b/blogPessoal/src/app/feed/feed.component.html
@@ -44,7 +44,7 @@
 
                     <label for="titulo" class="text-monospace">Título:</label>
                     <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Digite seu título"
-                    [(ngModel)] = "postagem.titulo">
+                        [(ngModel)]="postagem.titulo">
 
                 </div>
 
@@ -52,12 +52,12 @@
 
                     <label for="texto" class="text-monospace">Texto:</label>
                     <textarea name="texto" id="texto" cols="30" rows="4" class="form-control"
-                        placeholder="Digite seu texto" [(ngModel)] = "postagem.texto"></textarea>
+                        placeholder="Digite seu texto" [(ngModel)]="postagem.texto"></textarea>
 
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-outline-info w-25" (click) = "publicar()">Publicar</button>
+                    <button type="button" class="btn btn-outline-info w-25" (click)="publicar()">Publicar</button>
                 </div>
 
             </div>
@@ -67,7 +67,7 @@
 
             <h3 class="text-monospace text-center mb-5">Minhas Postagens</h3>
 
-            <div class="card mb-4" *ngFor="let postagem of listaPostagens">
+            <div class="card mb-4" *ngFor="let postagem of listaPostagens | orderBy : key : reverse">
                 <div class="card-header">
                     <h5 class="card-title"> {{ postagem.titulo }} </h5>
                 </div>
